--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -31,7 +31,7 @@
                 </table>
                 </p>
             <% } else { %>
-            <p>There are matches for you in the system.</p>
+            <p>There are no matches for you in the system.</p>
             <% } %>
         </main>
     </body>
