--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -46,6 +46,9 @@
               <li><a href="/profile/me">Your Profile</a></li>
               <li><a href="/logout">Logout</a></li>
                 `;
+                if (localStorage.getItem("verified") != "true") {
+                window.location.href = "/verify";
+            }
                     }
                 });
         </script>
